--- a/Chrome Extension/manifest.json
+++ b/Chrome Extension/manifest.json
@@ -30,7 +30,7 @@
     "content_scripts":
     [
         {
-            "matches": ["*://www.uah.edu/cgi-bin/*"],
+            "matches": ["https://www.uah.edu/cgi-bin/*"],
             "all_frames": true,
             "js": ["test.js"],
             "run_at": "document_end"
