--- a/Chrome Extension/manifest.json
+++ b/Chrome Extension/manifest.json
@@ -32,7 +32,7 @@
         {
             "matches": ["https://www.uah.edu/cgi-bin/*"],
             "all_frames": true,
-            "js": ["hyperlinks.js"],
+            "js": ["UAHPageEdit.js"],
             "run_at": "document_idle"
         }
     ]
